--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@
 cartopy==0.17.0
 cycler==0.10.0            # via matplotlib
 kiwisolver==1.1.0         # via matplotlib
+Flask==1.1.1
 matplotlib==3.1.1
 mpmath==1.1.0
 numpy==1.17.2             # via cartopy, matplotlib, pandas, scipy
